# yosemite

./: .gitignore  AUTH_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  arrt.md  dbeaver.md  requirements.txt
ai/: .gitignore  check_agents.py  gnn_model.py  main.py  model.py  pyproject.toml  requirements.txt  run.sh  run_local.sh  sequence_model.py
ai/invoice_fraud/: __init__.py  _llm.py  agent.py  document_tool.py  graph_tool.py  multi_agent.py  tools.py
backend/: .gitignore  AXUM_SETUP.md
backend/arrt/: .env  Cargo.toml
backend/arrt/migrations/: 0001_create_transactions.sql  0001_schema.sql  0002_add_missing_columns.sql  0003_create_fraud_reports.sql  0004_add_ai_review_to_fraud_reports.sql  0005_seed_demo_narrative.sql  0006_create_saved_csv_data.sql  0007_add_scan_results_to_saved_csv.sql  0008_create_saved_entity_data.sql  0010_fraud_scan_cache.sql  0011_create_users.sql  0012_add_user_id_to_tables.sql  0013_seed_demo_fraud_transactions.sql  0014_placeholder.sql
backend/arrt/src/: lib.rs  main.rs  state.rs
backend/arrt/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  token.rs
backend/arrt/src/models/: fraud.rs  mod.rs  sanctions.rs  saved_csv.rs  saved_entity.rs
backend/arrt/src/routes/: PIPELINE_FLOW.md  advanced.rs  agent_scan.rs  chat.rs  csv_saves.rs  document.rs  entity.rs  entity_saves.rs  fraud.rs  fraud_report.rs  georisk.rs  mod.rs  pipeline.rs  risk.rs  sanctions.rs  stats.rs  transactions.rs
backend/arrt/src/services/: ai_parser.rs  anomaly_service.rs  fraud_rules.rs  gemini.rs  gemini_vision.rs  llm.rs  ml_sidecar.rs  mod.rs  open_sanctions.rs
backend/arrt/tests/: ai2_tests.rs
components/: PDFExport.tsx  RiskBadge.tsx  RiskSummary.tsx
docs/: DATASETS.md  FRAUD_MODELS.md  UI_CLEANUP_AND_SMB_PLAN.md
frontend/: .env.example  .gitignore  middleware.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
ml-sidecar/: main.py  model.py  run.sh
(+38 files in other folders)
